talentdashboard/static/css/scoutmap/app/activity.less
.activity {

    .panel-title {
        margin-bottom: 20px; 
    }

    .activity-items {
        margin-bottom: 25px;
        border: 1px solid #D0D3D6;
        border-radius: 2px;

        .activity-item {
            border-bottom: 1px solid #ebedf3;
        }

        .activity-title-employee-name {
            font-weight: bold;
        }
        .activity-header {
            display: block; 
            min-width: 90%;
            border-bottom: 1px solid #D0D3D6;
        }
        .activity-description {
            margin: 10px;
        }
        .activity-owner-avatar-container {
            display: block; 
            float: left; 
            width: 48px;
            margin-right: 20px;

            .comment-owner-avatar {
                display: inline-block; 
                margin-left: auto; 
                margin-right: auto; 
                height: 48px; 
                vertical-align:text-top;
                border-radius: 90px;
            }   
        }
        .activity-icon {
            font-size: 28px;
            margin: 2px auto;
            display: block;
            color: #bbb;
        }
    } 
    .activate-reply {
        border: 1px solid #cccccc;
        border-radius: 4px;
        @media not screen and (max-width : 640px) {
            width: 73% !important;
        }
        @media only screen and (max-width : 640px) {
            width: 70% !important;
        }
    }
    .deactivate-reply {
        border: none !important;
        border-radius: 0px;
    }
    .activate-reply-image {
        @media not screen and (max-width : 640px) {
            opacity: 1;
        }
        @media only screen and (max-width : 640px) {
            opacity: 0;
            width: 0 !important;
        }
    }
    .deactivate-reply-image {
        opacity: .5;
    }
    .animate-show {
        opacity: 1;
    }

    .animate-show.ng-hide-add, .animate-show.ng-hide-remove {
        -moz-transition: opacity .3s ease-in;
        -webkit-transition: opacity .3s ease-in;
        transition: opacity .3s ease-in;
    }

    .animate-show.ng-hide {
      opacity: 0;
    }


    /* Activity Type [Check-in] */
    .activity-checkin {
        padding: 20px 10px;
        display: block;
        overflow: hidden;
        margin: 0;
        background: #fff;

        @media only screen and (max-width : 990px) {
            padding: 15px 10px;
            clear: both;
        }
        h3 {
            margin-bottom: 5px;
        }
        .avatar-container {
            margin: 0;
            padding-right: 0;

            @media only screen and (max-width : 900px) {
                display: none;
            } 
        }  
        .employee-attribute {
            left: 10px;
        }
        .activity-checkin-summary {
            color: #555;
            white-space: pre-line;
            margin-top: 10px;
        }
        .activity-checkin-details {
            padding-left: 20px;

            @media only screen and (max-width : 990px) {
              padding-left: 0;
            }  
        }
        .activity-checkin-type {
            position: relative;
            margin: 0 0 15px 18px;
        }
        .activity-checkin-type .glyphicon {
            font-size: 30px;
            color: #ccc;
        }   
        .activity-checkin-type .glyphicon-top {
            position: absolute;
            right: 12px;
            color: #ccc;
            z-index: 18;
            top: 5px;
        } 
        .activity-checkin-type .glyphicon-outline {
            position: absolute;
            right: 10px;
            color: #fff;
            z-index: 11;
            top: 4px;
        }        
    }

    .activity-checkin:hover {
        background-color: #f9f9f9;
    }

    .checkin-type {
        color: #333;
        font-weight: bold;
        font-size: 12px;
    }


    /* Activity Type [Comments] */
    .comment-copy {
        margin: -20px 0px 0 68px;
        color: #555;
        white-space: pre-line;
    }
    .comment-disabled {
      color: #999;
      text-decoration: line-through;
    }
    .comment-actions {
        position: relative;
        color: #ccc;
    }
    .total-replies {
        display: block;
        margin: 10px;
        font-weight: bold;
        color: #ccc;
    }
    .edit-textarea {
        margin: 12px 0 8px;
        width: 95%;
        min-height: 100px;
    }
    .comment-textarea-expand {
      min-height: 150px;
    }
    .comment-textarea {
      min-height: 15px;
    }
    .comment-summarized {
      margin: 5px;
      background-color: #fff;
      padding: 15px;
      border-radius: 5px;
    }
    .comment-editor {
        position: relative;
        background: #fff;
        margin: 0 0 35px 68px;
    }
  
    ul.feed-actions {
      list-style: none;
      font-size: 12px;
    }
    .feed-actions li {
        background: url('/static/css/icon_bullet_grey2_4x4.png') no-repeat scroll 100% 6px transparent;
        float: left;
        margin: 0 0px 0 7px;
        padding: 0 10px 0 0px;
        cursor: pointer;
    }
  .feed-actions li:last-child {
    background: none;
  }
  .feed-action a {
      color: #888;
  } 
  .feed-action a:hover {
      text-decoration: none;
      color: #333;
  }

    .comment-reply-avatar-container {
        float: left; 
    }


  .comment-replies {

    @media only screen and (max-width : 640px) {
        margin: 10px 0 0;
    }
    .comment-reply {
      padding: 15px 15px 20px;
      background-color: #efefef;
    }
    .comment-reply-textarea {
        padding: 10px 10px 20px 10px;
        background-color: #efefef;

        textarea {
            position: relative; 
            max-width: 515px; 
            min-height: 27px;
            height: 60px;
            background-color:#fff;
            color:#333;
            resize:vertical;
            font-size: 15px;
            padding: 6px;
            border:1px solid #ccc;
            display: inline;
            vertical-align: top;
            width: 88%;
            height: 36px;
            resize: none;
            -moz-transition: all .3s ease-out;
            -webkit-transition: all .3s ease-out;
            transition: all .3s ease-out;

            textarea:focus {
                min-height: 120px;
                height: 120px;
            }

            @media only screen and (max-width : 1280px) {
                width: 88%;
            }
            @media only screen and (max-width : 640px) {
                width: 80%;
                margin-bottom: 5px;
            }   
        }
    }
    .comment-reply-name {
        font-weight: bold;  
        margin-left: 1px;   
    }
    .comment-reply-copy {
        margin: 5px 5px 5px 52px;
        font-size: 14px;
        line-height: 20px;
        white-space: pre-wrap;
    }

    button.comment {
        border: 1px solid #434343;
        -moz-border-radius: 3px;
        -webkit-border-radius: 3px;
        border-radius: 3px;
        height: 35px;
        width: 110px;
        background-color:#434343;
        font-size:14px;
        color:#d3d4d4;
        margin-top:10px;
        margin-bottom:15px;
        cursor: pointer;
      }
      button.small-comment {
        border: 1px solid #434343;
        -moz-border-radius: 3px;
        -webkit-border-radius: 3px;
        border-radius: 3px;
        height: 36px;
        background-color:#434343;
        font-size:14px;
        color:#fff;
        cursor: pointer;
        display: inline;
        vertical-align: top;
        margin-left: 10px;

        @media only screen and (max-width : 640px) {
            width: 100%;
        }   
      }
      button.small-comment:hover:enabled {
        background-color:#272727;
      }
      button.small-comment:disabled {
          cursor: default;opacity:0.4;
      }
      button.comment:hover:enabled {
        background-color:#272727;
      }
      button.comment:disabled {
          cursor: default;opacity:0.4;
      }
  }
}

.btn-show-more {
  @media only screen and (max-width : 640px) {
    background-color: #efefef;
      font-size: 14px;
      display: block;
      width: 100%;
      padding: 10px;
      font-weight: bold;
  }   
}

/* No Comments */
.no-comments {
  color: #aaa;
  margin-top: -15px;
}

.new-comment {
  textarea {
    height: 35px;
  }
  .expand {
    height: 120px;
  }
}

.visibility {
  overflow: hidden;
  margin: 15px 0;

  h3, label {
    float: left;
    margin: 5px 0;
  }
  h3 {
    margin: 5px 20px 0 0;
  }
    a {
      cursor: pointer;
    }
}


.comment-replies-notification {
    background-color: #f1f1f1;
    padding: 10px;
    margin: 1px 0 0 68px;    
    display: block;
}

